--- a/frontend/src/styles/Container.module.scss
+++ b/frontend/src/styles/Container.module.scss
@@ -16,7 +16,7 @@
   background: linear-gradient(
     170deg,
     var(--bgGradientColor) 0%,
-    var(--primary-background) 75%
+    var(--bgGradientEndColor) 75%
   );
 }
 
