--- a/frontend/src/styles/Dashboard.page.module.scss
+++ b/frontend/src/styles/Dashboard.page.module.scss
@@ -160,6 +160,7 @@
     border-radius: 5px;
     transition: all 200ms ease;
     cursor: pointer;
+    font-weight: bold;
 
     &:hover {
       background-color: #05050583;
