--- a/frontend/src/styles/DashboardPages.module.scss
+++ b/frontend/src/styles/DashboardPages.module.scss
@@ -36,3 +36,13 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.welcomerModuleChannel {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #d3d1d1;
+
+  div {
+    margin: 0;
+  }
+}
