--- a/frontend/src/styles/DashboardPages.module.scss
+++ b/frontend/src/styles/DashboardPages.module.scss
@@ -46,3 +46,23 @@
     margin: 0;
   }
 }
+
+.welcomerModuleWarns {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0px;
+}
+
+.welcomerModuleWarn {
+  color: #949292;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 550px) {
+  .welcomerModuleWarns {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
