--- a/frontend/src/styles/EmbedEditor.module.scss
+++ b/frontend/src/styles/EmbedEditor.module.scss
@@ -53,11 +53,13 @@
   min-height: 100px;
   margin-top: 30px;
   padding: 10px;
+  padding-bottom: 20px;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
+  flex-direction: column;
   background-color: #36393f;
-  border-radius: 10px;
+  border-radius: 5px;
   font-family: "Proxima Nova", "Helvetica Neue", sans-serif !important;
 }
 
@@ -81,9 +83,16 @@
     position: relative;
     font-size: 10px;
     padding: 3px 4px;
-    margin-left: 10px;
+    margin-left: 5px;
     border-radius: 4px;
     background-color: #5865f6;
+  }
+
+  .messageDate {
+    color: #696c72;
+    font-weight: normal;
+    font-size: 13px;
+    margin-left: 7px;
   }
 
   img {
@@ -93,5 +102,17 @@
     background-color: #1f222c;
     position: absolute;
     top: 0.5px;
+  }
+}
+
+.message {
+  position: relative;
+  left: 55px;
+  top: 5px;
+  width: 93%;
+  color: #dcddde;
+
+  .messageContent {
+    margin-bottom: 7px;
   }
 }
