--- a/frontend/src/styles/Embed.module.scss
+++ b/frontend/src/styles/Embed.module.scss
@@ -95,6 +95,7 @@
   width: 100px;
   border-radius: 5px;
   margin: 15px;
+  margin-top: 0px;
 }
 
 .image {
@@ -104,4 +105,6 @@
   margin: 15px;
   margin-left: 0px;
   max-width: 400px;
+  width: auto;
+  height: auto;
 }
