--- a/frontend/src/styles/Embed.module.scss
+++ b/frontend/src/styles/Embed.module.scss
@@ -74,12 +74,12 @@
   justify-content: flex-start;
   font-weight: bold;
   color: #dcddde;
-  margin: 3px 0px;
-  margin-bottom: 0px;
+  margin-top: 7px;
+  font-size: 11px;
 
   .footerIcon {
-    height: 16px;
-    width: 16px;
+    height: 20px;
+    width: 20px;
     border-radius: 50%;
     margin-right: 5px;
   }
