Added error message for page loader

--- a/frontend/src/styles/Loader.module.scss
+++ b/frontend/src/styles/Loader.module.scss
@@ -98,6 +98,7 @@
   flex-direction: column;
   z-index: 100000;
   opacity: 1;
+  margin: 0px !important;
   background: linear-gradient(
     170deg,
     var(--primary-theme) 0%,
