hude improvements on welcomer module and more
- Fixed decsription overlapping embed
- Fixed markdown rendering headers (discord does not support it)
- Changed text input's one argument to make it look more clean
- Fixed background gradient overlapping viewport

--- a/frontend/src/styles/Container.module.scss
+++ b/frontend/src/styles/Container.module.scss
@@ -9,7 +9,7 @@
   width: 100vw;
   height: 100vh;
   min-height: 600px;
-  position: absolute;
+  position: fixed;
   z-index: 0;
   left: 0;
   top: 0;
@@ -23,7 +23,7 @@
 .bgGradient::after {
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   content: "";
   left: 0;
   top: 0;
