--- a/frontend/src/styles/Embed.module.scss
+++ b/frontend/src/styles/Embed.module.scss
@@ -21,6 +21,14 @@
     width: 4px;
     background-color: var(--embed-color);
   }
+
+  code {
+    padding: 2px;
+    font-size: 12px;
+    font-family: "Consolas", "Arial", sans-serif;
+    background-color: #202225;
+    color: #dcddde;
+  }
 }
 
 .author {
@@ -32,6 +40,7 @@
   font-size: 13px;
   color: #dcddde;
   margin: 3px 0px;
+  width: fit-content;
 
   .authorIcon {
     height: 24px;
@@ -49,6 +58,7 @@
   color: white;
   grid-column: 1 / 2;
   margin: 5px 0px;
+  width: fit-content;
 
   &:empty {
     display: none;
@@ -60,6 +70,8 @@
   font-size: 14.5px;
   color: #dcddde;
   line-height: 1.3;
+  max-width: 400px;
+  word-wrap: break-word;
 
   &:empty {
     display: none;
