--- a/frontend/src/styles/DashboardPages.module.scss
+++ b/frontend/src/styles/DashboardPages.module.scss
@@ -1,3 +1,14 @@
+@keyframes moduleInit {
+  0% {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
 .module {
   width: 100%;
   background-color: var(--primary-background-glass);
@@ -7,6 +18,8 @@
   max-width: 1000px;
   position: relative;
   z-index: 0;
+  opacity: 0;
+  animation: moduleInit 500ms forwards;
 
   .moduleHead {
     margin-bottom: 5px;
@@ -17,6 +30,12 @@
       color: #949292;
       font-weight: bold;
     }
+  }
+}
+
+@for $i from 1 through 500 {
+  .module:nth-child(#{$i}n) {
+    animation-delay: #{$i * 30}ms;
   }
 }
 
